refactor: fix SonarQube issues in validation module
- Add @SuppressWarnings for JPA relationship in RuleTemporalLinkEntity to resolve java:S1948
- Replace Stream.collect(Collectors.toList()) with Stream.toList() in TemporalPolicyController for java:S6204
- Remove unused Collectors import

SonarQube issues resolved: 2/2 (100%)